--- a/FlaskApp/app/templates/layout.html
+++ b/FlaskApp/app/templates/layout.html
@@ -1,75 +1,75 @@
+
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<html lang="es">
+    <head>
+    <meta charset="utf-8">
+    <title>HTML</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static',filename='./css/layout.css')}}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img src="../static/images/eye.png" width="25" height="50" class="d-inline-block align-top" alt="">
-        </a>
-        <a class="navbar-brand" id="navText" href="#">MT Analizer</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <link rel="stylesheet" href="{{ url_for('static',filename='./css/cab_body_pie.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='./css/theB_Interact.css')}}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-        <span class="navbar-text" style="display: inline-block; text-align: right; width: 100%">
-            <a class="navbar-brand" href="#">
-                <img src="../static/images/Logo_ESPE.png" width="50" height="50" class="d-inline-block " alt="">
-            </a>
-        </span>
-    </nav>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <div class="row">
-        <div class="col-2">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
-                    aria-controls="v-pills-home" aria-selected="true">Analizar</a>
-                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
-                    aria-controls="v-pills-profile" aria-selected="false">Información</a>
-                <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab"
-                    aria-controls="v-pills-messages" aria-selected="false">Acerca de </a>
+    <script class="u-script" type="text/javascript" src="{{ url_for('static',filename='./js/jquery.js')}}"></script>
+    <script class="u-script" type="text/javascript" src="{{ url_for('static',filename='./js/nicepage.js')}}"></script>
+
+    <!-- CDN -->
+    <!-- <link rel="stylesheet" href="{{ url_for('static',filename='./css/layout.css')}}"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    </head>
+
+    <body class="u-body u-overlap">
+
+        <!-- ::::: CABEZERA -->
+
+        <header id="main-header">
+
+            <div id="logo-header-LOGO" align="center">
+                
+                <img src="../static/images/logo_1.jpg" height="60px" align="center">
             </div>
-        </div>
+        
+            <a id="logo-header" href="../layout.html">
+                <span class="site-name">MT Analizer</span>
+                <span class="site-desc">Análisis de tráfico de red</span>
+            </a> <!-- / #logo-header -->
+        
+            <nav>
+                <ul>
+                    <li><a href="/menu/3/1">ESCANEO DE PUERTOS</a></li>
+                    <li><a href="/menu/2/1">ACERCA DE
+                    </a></li>
+                    
+                    <li><a href="/menu/1/1">INICIO</a></li>
+                </ul>
+            </nav><!-- / nav -->
+        
+        </header><!-- / #main-header -->
 
-        <div class="col-10 ">
-            <div class="card w-90 h-95 card  mt-3 mb-3 mr-3">
-                <div class="card-header">
-                    <h5 class="card-title">Analisis de tráfico malicioso</h5>
-                </div>
-                <div class="card-body " id="inside">
-                    <div class="card text-center ">
-                        <div class="card-body">
-                            {% block card1 %}
-                            {% endblock %}
-                        </div>
+        
+        
+        <!-- ::::: CUERPO -->
+        <!-- <div class="container" style="padding: 50px 100px 0 100px; background-color: blue;"> -->
+        
+        {% block menu %}
+        {% endblock %}
 
-                    </div>
-                    <div class="card mt-3 " style="height: 75%;">
-                        <div>
-                        {% block card2 %}
-                        {% endblock %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
-    </div>
+        
 
-    {% block body %}
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="{{ url_for('static',filename='./js/layout.js')}}"></script>
+    </body>
 
-    {% endblock %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="{{ url_for('static',filename='./js/layout.js')}}"></script>
-</body>
+    <!-- ::::: PIE DE PAGINA -->
+    
+    <footer id="main-footer">
+        <MARQUEE> 
+            <p>&copy; MT-Anailizar Universidad de las Fuerzas Armadas ESPE</a></p> 
+        </MARQUEE>
+    </footer><!-- / #main-footer -->
 
 </html>
