--- a/FlaskApp/app/templates/index.html
+++ b/FlaskApp/app/templates/index.html
@@ -1,37 +1,250 @@
 {% extends  './layout.html' %}
-{% block card1 %}
-<p class="card-text">Presione Iniciar para comenzar análisis.</p>
-<form action="/reviewInterfaces" method="POST">
-    <button id=test class="btn btn-primary" type="submit">Iniciar</button>
-</form>
-{% endblock %}
-{% block card2 %}
-{% with messages=get_flashed_messages() %}
-{% if messages %}
-{% if messages[0].tipo==1 %}
-<div class="card m-2">
-    <div class="card-header">
-        <h6 class="card-title  ">Seleccione una interfaz:</h6>
-    </div>
-    <div class="card-body">
-        <ul class="list-group"></ul>
 
-        {% for dat in messages[0].dato %}
-        <a href="/background_process_test" class="list-group-item list-group-item-action">- {{dat}}</a>
-        {% endfor %}
 
-        </ul>
-    </div>
-</div>
-{% endif %}
+{% block menu %}
 
-{% else %}
-<br>
-<h6 class="card-title text-center ">Informacións</h6>
-<br>
-<br>
-<p class="card-text text-center " style="color: gray;">No existe Información</p>
 
-{% endif %}
-{% endwith %}
-{% endblock %}
+            {% with messages=get_flashed_messages() %}
+
+            <!-- {{messages[0]}} -->
+            
+                {% if messages %}
+                    {% if messages[0].menu==1 %}
+                    <div id="informacion" class="container" style="padding: 50px 100px 50px 100px; display: block;">
+                        <div class="row">
+                            <!-- <div class="col-5" style="background-color: aqua;"> -->
+                            <div class="col-5">
+                                <img src="../static/images/img_Logo.png"  align="center" style="max-width:100%;">
+                            </div>
+            
+                            <div class="col-2" >
+                                <!-- Espacio de separación -->
+                            </div>
+                            <div class="col-5 align-self-center">
+                                <a href="/menu/3/1" style="color: inherit; text-decoration: none; vertical-align: middle;" >
+                                    <h2 class="text-center">Información</h2>
+                                    MT Anailizar es una aplicación web que se encarga
+                                    de analizar el trafico de red existente en busca
+                                    algun conflicto como malware....
+                                    <br><br>
+            
+                                    <div class="zoomCentral" align="center">
+                                        <button type="button" class="btn btn-outline-primary">Escanear puertos</button>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    
+                    </div>
+                    {% endif %}
+
+                    
+
+                    {% if messages[0].menu==2 %}
+                    <div id="contactos" class="container" style="padding: 50px 100px 50px 100px;">
+                        <div class="row">
+                        <div class="col-5" >
+            
+                            <img src="../static/images/logo_1.jpg"  align="center" style="max-width:100%; aspect-ratio: auto;">
+                        </div>
+            
+                        <div class="col-2" >
+                            <!-- Espacio de separación -->
+                        </div>
+                        <div class="col-5 align-self-center">
+                            <a href="#" style="color: inherit; text-decoration: none; vertical-align: middle;" >
+                                <h2 class="text-center">Equipo de desarrollo</h2>
+                                
+                                <br>
+                                <h5 class="text-center"><strong>John Ponce</strong></h5>
+                                <h6 class="text-center">Desarrollador</h6>
+                                <h6 class="text-center">0912345678</h6>
+            
+                                <br>
+                                <h5 class="text-center"><strong>Luigi Villarreal</strong></h5>
+                                <h6 class="text-center">Desarrollador</h6>
+                                <h6 class="text-center">0912345678</h6>
+                                
+                            </a>
+                        </div>
+                        </div>
+                    
+                    </div>
+                    {% endif %}
+
+                    <!-- {{messages[0].menu}}
+                    {{messages[0].analisisMenu}} -->
+
+                    {% if messages[0].menu==3 %}
+
+                    <!-- {{messages[0].menu}}
+                    {{messages[0].analisisMenu}} -->
+
+                    <div id="analisis" class="container" style="padding: 50px 100px 50px 100px;">
+                        <div class="row" >
+                
+                            <div class="col-12 ">
+                                <div class="card w-90 h-95 card  mt-3 mb-3 mr-3">
+                                    <div class="card-header">
+                                        <h5 class="card-title">Analisis de tráfico malicioso</h5>
+                                    </div>
+                                    <div class="card-body " id="inside">
+                                        {% if messages[0].analisisMenu==1 %}
+                                        <div class="card text-center ">
+                                            <div class="card-body">
+                                                <p class="card-text">Presione Iniciar para comenzar análisis.</p>
+                                                <form action="/reviewInterfaces/3/2" method="POST">
+                                                    <button id=test class="btn btn-primary" type="submit">Iniciar</button>
+                                                </form>
+                                            </div>
+                    
+                                        </div>
+                                        <div class="card mt-3 " style="height: 75%;">
+                                            <div>
+                                                <br>
+                                                <h6 class="card-title text-center ">Informacións</h6>
+                                                <br>
+                                                <br>
+                                                <p class="card-text text-center " style="color: gray;">No existe Información</p>
+                                            </div>
+                                        </div>
+                                        {% endif %}
+
+                                        {% if messages[0].analisisMenu==2 %}
+                                        <div class="card text-center ">
+                                            <div class="card-header">
+                                                <h3 class="card-title" align="center" >Seleccione una interfaz</h3>
+                                            </div>
+                                        </div>
+                                        <div class="card mt-3 " style="height: 75%;">
+                                            <div class="row">
+                                                <!-- {{messages}} -->
+                                    
+                                                <div class="card-body">
+                                                    <ul class="list-group">
+                                                    
+                                                    {% for dat in messages[0].interfaces %}
+                                                    <a href="/background_process_test/{{dat.id}}/3/3" value="2" class="list-group-item list-group-item-action">- {{dat.dato}}</a>
+                                                    {% endfor %}
+                                
+                                                    </ul>
+                                                </div>
+                                    
+                                            </div>
+                                        </div>
+                                        {% endif %}
+
+                                        {% if messages[0].analisisMenu==3 %}
+                                        <div class="card text-center ">
+                                            <div class="card-header">
+                                                <h5 class="card-title" align="center" >ANÁLISIS EN PROCESO</h5>
+                                            </div>
+                                        </div>
+
+                                        <div class="card-body">
+                                            <p class="card-text">Presione RESULTADOS para continuar.</p>
+                                            <form action="/cancelar/{{messages[0].task}}/3/4">
+                                                <button id=test class="btn btn-primary" type="submit">Resultados</button>
+                                            </form>
+                                        </div>
+                        
+                                        {% endif %}
+
+                                        {% if messages[0].analisisMenu==4 %}
+                                        <div class="card text-center ">
+                                            <div class="card-header">
+                                                <h5 class="card-title" align="center" >RESULTADOS</h5>
+                                            </div>
+                                        </div>
+                                        <div class="card mt-3 " style="height: 75%;">
+                                            <div class="row">
+                                                <!-- {{messages[0].analisis}}
+
+                                                {{messages[0].analisis[0]}}
+                                                {{messages[0].analisis[0].nombre}}
+                                                {{messages[0].analisis[1].nombre}} -->
+                                                <div class="card-body">
+                                                    <p class="card-text">Total de paquetes analizados:  {{messages[0].paquetes}}</p>
+                                                    <br>
+
+                                                    <p class="card-text">Detalle análisis</p>
+                                                    <br>
+
+                                                    <p class="card-text">Nombre:                {{messages[0].analisis[0].nombre}}</p>
+                                                    <p class="card-text">Cantidad encontrada:   {{messages[0].analisis[0].Cantidad}}</p>
+                                                    <br><br>
+
+                                                    <p class="card-text">Nombre:                {{messages[0].analisis[1].nombre}}</p>
+                                                    <p class="card-text">Cantidad encontrada:   {{messages[0].analisis[1].Cantidad}}</p>
+                                                    <br><br>
+
+                                                    <p class="card-text">Nombre:                {{messages[0].analisis[2].nombre}}</p>
+                                                    <p class="card-text">Cantidad encontrada:   {{messages[0].analisis[2].Cantidad}}</p>
+                                                    <br><br>
+
+                                                    <p class="card-text">Nombre:                {{messages[0].analisis[3].nombre}}</p>
+                                                    <p class="card-text">Cantidad encontrada:   {{messages[0].analisis[3].Cantidad}}</p>
+                                                    <br><br>
+                                                    <form action="/reviewInterfaces/3/2" method="POST">
+                                                        <button id=test class="btn btn-danger" type="submit" onclick="location.reload()">Cancelar</button>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% endif %}
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                    
+                        </div>
+                    </div>
+                    {% endif %}
+
+
+
+                    {% else %}
+                    <div id="informacion" class="container" style="padding: 50px 100px 50px 100px; display: block;">
+                        <div class="row">
+                            <!-- <div class="col-5" style="background-color: aqua;"> -->
+                            <div class="col-5">
+                                <img src="../static/images/img_Logo.png"  align="center" style="max-width:100%;">
+                            </div>
+            
+                            <div class="col-2" >
+                                <!-- Espacio de separación -->
+                            </div>
+                            <div class="col-5 align-self-center">
+                                <a href="/menu/3/1" style="color: inherit; text-decoration: none; vertical-align: middle;" >
+                                    <h2 class="text-center">Información</h2>
+                                    MT Anailizar es una aplicación web que se encarga
+                                    de analizar el trafico de red existente en busca
+                                    algun conflicto como malware....
+                                    <br><br>
+            
+                                    <div class="zoomCentral" align="center">
+                                        <button type="button" class="btn btn-outline-primary">Escanear puertos</button>
+                                    </div>
+                                </a>
+
+                                <a href="/insertarDatos" style="color: inherit; text-decoration: none; vertical-align: middle;" >
+                                    <h2 class="text-center">Inserta DB</h2>
+                                </a>
+                            </div>
+                        </div>
+                    
+                    </div>
+
+                    {% endif %}
+            {% endwith %}
+        {% endblock %}
+
+        {% block card1 %}
+        <p class="card-text">Presione Iniciar para comenzar análisis.</p>
+        <form action="/reviewInterfaces" method="POST">
+            <button id=test class="btn btn-primary" type="submit">Iniciar</button>
+        </form>
+        {% endblock %}
+
+
+        
