--- a/FlaskApp/app/templates/layout.html
+++ b/FlaskApp/app/templates/layout.html
@@ -13,7 +13,9 @@
     <script src="https://kit.fontawesome.com/d2d16bd154.js" crossorigin="anonymous"></script>
     <script class="u-script" type="text/javascript" src="{{ url_for('static',filename='./js/jquery.js')}}"></script>
     <script class="u-script" type="text/javascript" src="{{ url_for('static',filename='./js/nicepage.js')}}"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+    
     <!-- CDN -->
     <!-- <link rel="stylesheet" href="{{ url_for('static',filename='./css/layout.css')}}"> -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -49,7 +51,7 @@
         
         </header><!-- / #main-header -->
 
-        
+        <p id="message"></p>
         
         <!-- ::::: CUERPO -->
         <!-- <div class="container" style="padding: 50px 100px 0 100px; background-color: blue;"> -->
