--- a/FlaskApp/app/templates/layout.html
+++ b/FlaskApp/app/templates/layout.html
@@ -66,9 +66,14 @@
 
     <!-- ::::: PIE DE PAGINA -->
     
-    <footer id="main-footer">
+    <footer id="main-footer" style="background-color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    color: white;">
         <MARQUEE> 
-            <p>&copy; MT-Anailizar Universidad de las Fuerzas Armadas ESPE</a></p> 
+            <p>&copy; MT-Anailizer Universidad de las Fuerzas Armadas ESPE</a></p> 
         </MARQUEE>
     </footer><!-- / #main-footer -->
 
