--- a/FlaskApp/app/templates/index.html
+++ b/FlaskApp/app/templates/index.html
@@ -50,17 +50,24 @@
                         </div>
                         <div class="col-5 align-self-center">
                             <a href="#" style="color: inherit; text-decoration: none; vertical-align: middle;" >
-                                <h2 class="text-center">Equipo de desarrollo</h2>
+                                <h3 class="text-center"><strong>PROYECTO ESPE-CERT</strong></h3>
+                                <br>
+                                <div>
+                                <h4 class="text-center"><strong>Director del Proyecto</strong></h4>
+                                <br>
+                                <h5 class="text-center">PhD. Walter Fuertes</h5>
+                
+                                </div>
+                                <br>
+                                <h4 class="text-center"><strong>Equipo de desarrollo</strong></h4>
                                 
                                 <br>
-                                <h5 class="text-center"><strong>John Ponce</strong></h5>
-                                <h6 class="text-center">Desarrollador</h6>
-                                <h6 class="text-center">0912345678</h6>
+                                <h5 class="text-center">John Ponce</h5>
+                                <h6 class="text-center">jfponce1@espe.edu.ec</h6>
             
                                 <br>
-                                <h5 class="text-center"><strong>Luigi Villarreal</strong></h5>
-                                <h6 class="text-center">Desarrollador</h6>
-                                <h6 class="text-center">0912345678</h6>
+                                <h5 class="text-center">Luigi Villarreal</h5>
+                                <h6 class="text-center">ldvillarreal@espe.edu.ec</h6>
                                 
                             </a>
                         </div>
@@ -205,15 +212,7 @@
                                             </div>
                     
                                         </div>
-                                        <div class="card mt-3 " style="height: 75%;">
-                                            <div>
-                                                <br>
-                                                <h6 class="card-title text-center ">Información</h6>
-                                                <br>
-                                                <br>
-                                                <p class="card-text text-center " style="color: gray;">No existe Información</p>
-                                            </div>
-                                        </div>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -245,19 +244,17 @@
                                         </div>
                     {% endif %}
                     {% if messages[0].analisisMenu==3 %}
+                    <div class="container">
                                         <div class="card text-center ">
                                             <div class="card-header">
                                                 <h5 class="card-title" align="center" >ANÁLISIS EN PROCESO</h5>
                                             </div>
                                         </div>
-                                        
-
-                                        <div class="card-body">
-                                            <p class="card-text" >Presione RESULTADOS para continuar.</p>
-                                            <form action="/cancelar/{{messages[0].task}}/3/4/{{messages[0].puerto}}">
-                                                <button id=test class="btn btn-primary" type="submit">Resultados</button>
-                                            </form>
-                                        </div>
+                                        <br>
+                                        <p class="card-text" >Escaneado... </p>
+                                        <img src="{{url_for('static', filename='Search.gif')}}"  style="padding: 2%;" alt="">
+                                        <br>
+                                        <br>
                                         <p id="results">Resultado: <span id="result" style="color: green;">Protegido</span></p>
                                         <table class="table table-bordered" style="font-size: 12px;visibility: hidden;" id="tableAtack">
                                             <thead class="thead-dark" >
@@ -271,6 +268,10 @@
                                             <tbody id="cuerpo">
                                             </tbody>
                                           </table>
+
+                                        <form action="/cancelar/{{messages[0].task}}/3/4/{{messages[0].puerto}}">
+                                            <button id=test class="btn btn-primary" type="submit" style="float: right;">Finalizar</button>
+                                        </form>
                                         <script>
                                             $('#results').ready(function() {
                                                 var socket = io.connect();
@@ -333,7 +334,7 @@
                                                 });
                                             });
                                         </script>
-                        
+                    </div>    
                     {% endif %}
                     {% if messages[0].analisisMenu==4 %}
                                         <div class="card text-center ">
@@ -348,30 +349,40 @@
                                                 {{messages[0].analisis[0]}}
                                                 {{messages[0].analisis[0].nombre}}
                                                 {{messages[0].analisis[1].nombre}} -->
-                                                <div class="card-body">
-                                                    <p class="card-text">Fecha y hora:  {{messages[0].fecha}}</p>
-                                                    <p class="card-text">Total de paquetes analizados:  {{messages[0].paquetes}}</p>
+                                                <div class="card-body" style="font-size: 14px">
+                                                    <div class="container">
+                                                    <p class="card-text">
+                                                    Fecha y hora:  {{messages[0].fecha}}<br>
+                                                    Total de paquetes analizados:  {{messages[0].paquetes}}
+                                                    </p>
                                                     <br>
 
-                                                    <p class="card-text">Detalle análisis</p>
+                                                    <h5 class="card-text" style="text-align: center;">Análisis por paquetes</h5>
                                                     <br>
-
-                                                    <p class="card-text">Nombre:                {{messages[0].analisis[0].nombre}}</p>
-                                                    <p class="card-text">Cantidad encontrada:   {{messages[0].analisis[0].Cantidad}}</p>
-                                                    <br><br>
-
-                                                    <p class="card-text">Nombre:                {{messages[0].analisis[1].nombre}}</p>
-                                                    <p class="card-text">Cantidad encontrada:   {{messages[0].analisis[1].Cantidad}}</p>
-                                                    <br><br>
-
-                                                    <p class="card-text">Nombre:                {{messages[0].analisis[2].nombre}}</p>
-                                                    <p class="card-text">Cantidad encontrada:   {{messages[0].analisis[2].Cantidad}}</p>
-                                                    <br><br>
-
+                                                    <p class="card-text">
+                                                     Nombre:                {{messages[0].analisis[0].nombre}}<br>
+                                                     Cantidad:              {{messages[0].analisis[0].Cantidad}}
+                                                    </p>
+                                                    <br>
                                                     
-                                                    <form action="/reviewInterfaces/3/2" method="POST">
-                                                        <button id=test class="btn btn-danger" type="submit" onclick="location.reload()">Cancelar</button>
-                                                    </form>
+                                                    {% if messages[0].analisis[1].Cantidad>0 %}
+                                                    <p class="card-text">
+                                                    Nombre:                {{messages[0].analisis[1].nombre}}<br>
+                                                    Cantidad:              {{messages[0].analisis[1].Cantidad}}
+                                                    </p>
+                                                    <br>
+                                                    {% endif %}
+                                                    {% if messages[0].analisis[2].Cantidad>0 %}
+                                                    <p class="card-text">
+                                                    Nombre:                {{messages[0].analisis[2].nombre}}<br>
+                                                    Cantidad:              {{messages[0].analisis[2].Cantidad}}</p>
+                                                    <br>
+                                                    {% endif %}
+                                                    
+                                                    <a href="/menu/1/1" >
+                                                        <button id=test class="btn btn-primary" type="submit" onclick="location.reload()" style="float: right;padding:5px">Regresar</button>
+                                                    </a>
+                                                </div>
                                                 </div>
                                             </div>
                                         </div>
